2007-05-09  Darin Adler  <darin@apple.com>

        - checked in a file that was accidentally left out of the last check-in

        * fast/js/cyclic-prototypes-expected.txt: Added.

2007-05-09  Eric Seidel  <eric@webkit.org>

        Reviewed by mjs.
        
        http://bugs.webkit.org/show_bug.cgi?id=6985
        Cyclic __proto__ values cause webkit to hang

        * fast/js/cyclic-prototypes-expected.txt: Added.
        * fast/js/cyclic-prototypes.html: Added.
        * fast/js/resources/cyclic-prototypes.js: Added.

2007-05-08  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.

        Added test to verify that you get back the same JS/ObjC wrapper when
        you access the same object twice.

        * fast/dom/wrapper-identity-expected.txt: Added.
        * fast/dom/wrapper-identity.html: Added.

2007-05-08  Kimmo Kinnunen  <kimmok@iki.fi>

        Reviewed by darin.  Landed by eseidel.

        - http://bugs.webkit.org/show_bug.cgi?id=10880  Do..while loop gains extra ;

        * fast/js/do-while-semicolon-expected.txt: Added.
        * fast/js/do-while-semicolon.html: Added.
        * fast/js/resources/do-while-semicolon.js: Added.

2007-05-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by darin.

        Test for <rdar://problem/5188938> arc method on 
        Canvas causes hang or crash work around.

        * fast/canvas/arc-crash-expected.txt: Added.
        * fast/canvas/arc-crash.html: Added.

2007-05-08  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=13480
        window.Attr is undefined

        * fast/dom/Window/attr-constructor-expected.txt: Added.
        * fast/dom/Window/attr-constructor.html: Added.

        * fast/dom/Window/window-properties-expected.txt: Many new global constructors added.

2007-05-07  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by oliver
        
        <rdar://problem/4895428> Can't drag selected ToDo
