@@ -45,11 +45,11 @@ layer at (0,0) size 785x1022
         RenderBlock (floating) {DIV} at (5,5) size 100x100 [bgcolor=#008000]
         RenderTextControl {INPUT} at (55,5) size 106x106 [bgcolor=#800080] [border: (2px inset #000000)]
         RenderText {#text} at (0,0) size 0x0
-layer at (216,528) size 100x100
-  RenderBlock {DIV} at (3,3) size 100x100
-layer at (316,656) size 100x100
-  RenderBlock {DIV} at (3,3) size 100x100
-layer at (66,784) size 100x100
-  RenderBlock {DIV} at (3,3) size 100x100
-layer at (66,912) size 100x100
-  RenderBlock {DIV} at (3,3) size 100x100
+layer at (216,571) size 100x13
+  RenderBlock {DIV} at (3,46) size 100x13
+layer at (316,699) size 100x13
+  RenderBlock {DIV} at (3,46) size 100x13
+layer at (66,827) size 100x13
+  RenderBlock {DIV} at (3,46) size 100x13
+layer at (66,955) size 100x13
+  RenderBlock {DIV} at (3,46) size 100x13
